Updated Role Changing Feature based on "Soft Delete"