@@ -5,18 +5,16 @@ import static org.junit.jupiter.api.Assertions.*;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.Set;
 
 import org.junit.jupiter.api.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase;
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
 import org.springframework.context.annotation.Import;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.test.context.ActiveProfiles;
 
-import jakarta.persistence.EntityManager;
 import jakarta.persistence.EntityNotFoundException;
-import jakarta.persistence.PersistenceContext;
 import jakarta.validation.ConstraintViolationException;
 import ua.foxminded.university.TestcontainersConfiguration;
 import ua.foxminded.university.model.domain.Student;
@@ -27,6 +25,8 @@ import ua.foxminded.university.security.config.PasswordEncoderConfig;
 import ua.foxminded.university.service.dto.request.student.StudentCreateDto;
 import ua.foxminded.university.service.util.DtoMapper;
 import ua.foxminded.university.service.util.DuplicateGuard;
+import ua.foxminded.university.service.util.projectionmapper.DateTimeMapper;
+import ua.foxminded.university.service.util.projectionmapper.DeletedStudentCardMapper;
 import ua.foxminded.university.service.util.validation.EntityValidatior;
 import ua.foxminded.university.service.util.validation.config.ValidatorConfig;
 import ua.foxminded.university.testutil.TestDataInitializer;
@@ -35,19 +35,34 @@ import ua.foxminded.university.testutil.TestDataInitializer;
 @ActiveProfiles("test")
 @AutoConfigureTestDatabase(replace = AutoConfigureTestDatabase.Replace.NONE)
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
-@Import({ TestcontainersConfiguration.class, StudentService.class, AppUserService.class, TestDataInitializer.class,
-		ValidatorConfig.class, EntityValidatior.class, PasswordPolicy.class, PasswordEncoderConfig.class,
-		DtoMapper.class, DuplicateGuard.class })
+@Import({ 
+    TestcontainersConfiguration.class,
+    StudentService.class,
+    AppUserService.class,
+    TestDataInitializer.class,
+	ValidatorConfig.class,
+	EntityValidatior.class,
+	PasswordPolicy.class,
+	PasswordEncoderConfig.class,
+	DtoMapper.class,
+	DuplicateGuard.class,
+	DeletedStudentCardMapper.class,
+	DateTimeMapper.class
+})
 class StudentServiceTest {
 
 	static final String DEFAULT_GROUP_NAME = "CS-101";
 	static final String UPDATED_GROUP_NAME = "CS-102";
+	
+	static final String EMAIL_CREATE_HAPPY = "student.create.happy@example.com";
+	static final String EMAIL_DELETE_HAPPY = "student.delete.happy@example.com";
+	static final String EMAIL_NON_EXISTING_GROUP = "student.bad.group@example.com";
+	static final String EMAIL_MOVE_HAPPY = "student.move.happy@example.com";
+	static final String EMAIL_NULL_GROUP = "student.null.group@example.com";
+	static final String EMAIL_DELETE_BY_ID = "student.delete.by.id@example.com";
+	static final String EMAIL_DELETED_CARD = "student.deleted.card@example.com";
 
-	static final String VALID_EMAIL = "student1@example.com";
-	static final String UPDATED_EMAIL = "student1updated@example.com";
 	static final String DUPLICATED_EMAIL = "dup@example.com";
-	static final String DUP_UPDATE_EMAIL_A = "dup-update-a@example.com";
-	static final String DUP_UPDATE_EMAIL_B = "dup-update-b@example.com";
 	static final String MOOVE_NON_GRUP_EMAIL = "move-nogroup-1@example.com";
 	static final String NOT_AN_EMAIL = "not-an-email";
 
@@ -62,71 +77,107 @@ class StudentServiceTest {
 
 	static final Long MISSING_ID = 999L;
 
-	@Autowired
-	private StudentService studentService;
+	@Autowired StudentService studentService;
+	@Autowired TestDataInitializer initializer;
+	
+	StudyGroup defaultGroup, updatedGroup;
+	Student temp;
 
-	@PersistenceContext
-	private EntityManager em;
-
-	@Autowired
-	private TestDataInitializer initializer;
-
-	private StudyGroup defaultGroup;
-	private StudyGroup updatedGroup;
-
-	private Student temp;
-
-	private StudentCreateDto dto(String email, String password, String first, String last, Long groupId, Integer year) {
+	StudentCreateDto dto(String email, String password, String first, String last, Long groupId, Integer year) {
 		return new StudentCreateDto(email, password, first, last, groupId, year);
 	}
 
 	@BeforeAll
 	void setup() {
-		defaultGroup = initializer.persistAll(StudyGroup.builder().name(DEFAULT_GROUP_NAME).build()).get(0);
-		updatedGroup = initializer.persistAll(StudyGroup.builder().name(UPDATED_GROUP_NAME).build()).get(0);
+		defaultGroup = initializer.persistAll(StudyGroup.builder().name(DEFAULT_GROUP_NAME).build()).getFirst();
+		updatedGroup = initializer.persistAll(StudyGroup.builder().name(UPDATED_GROUP_NAME).build()).getFirst();
 	}
 
 	@AfterEach
 	void cleanup() {
-		Optional.ofNullable(temp).ifPresent(user -> studentService.deleteByIds(List.of(temp.getId())));
+		Optional.ofNullable(temp).ifPresent(user -> studentService.deleteById(temp.getId()));
+		temp = null;
 	}
 
 	@Test
 	@DisplayName("createAll: happy path — creates Student with STUDENT role and linked AppUser")
 	void createAll_happyPath_success() {
-		var createDto = dto(VALID_EMAIL,
-				VALID_PASSWORD,
-				VALID_FIRST_NAME,
-				VALID_LAST_NAME,
-				defaultGroup.getId(),
-				VALID_ENROLLMENT_YEAR);
+	    var createDto = dto(
+	            EMAIL_CREATE_HAPPY,
+	            VALID_PASSWORD,
+	            VALID_FIRST_NAME,
+	            VALID_LAST_NAME,
+	            defaultGroup.getId(),
+	            VALID_ENROLLMENT_YEAR
+	    );
 
-		temp = studentService.createAll(List.of(createDto)).get(0);
+	    temp = studentService.createAll(List.of(createDto)).getFirst();
 
 		assertNotNull(temp.getId(), "Student ID should be assigned after persist");
 		assertNotNull(temp.getUser(), "Student must reference an AppUser");
 		assertEquals(temp.getUser().getId(), temp.getId(), "@MapsId requires Student.id to equal AppUser.id");
-		assertEquals(VALID_EMAIL, temp.getUser().getEmail(), "Email should be persisted as provided/normalized");
+		assertEquals(EMAIL_CREATE_HAPPY, temp.getUser().getEmail(), "Email should be persisted as provided/normalized");
 		assertEquals(defaultGroup.getId(), temp.getGroup().getId(), "Student should be linked to default group");
 		assertEquals(UserRole.STUDENT, temp.getUser().getRole(), "Service must set role=STUDENT");
 	}
-
+	
 	@Test
-	@DisplayName("deleteByIds: happy path — delete existing student and report notFound")
-	void deleteByIds_happyPath_success() {
-		var createDto = dto(VALID_EMAIL,
-				VALID_PASSWORD,
-				VALID_FIRST_NAME,
-				VALID_LAST_NAME,
-				defaultGroup.getId(),
-				VALID_ENROLLMENT_YEAR);
+	@DisplayName("deleteById: soft deletes active student")
+	void deleteById_activeStudent_softDeletes() {
+	    var createDto = dto(
+	            EMAIL_DELETE_BY_ID,
+	            VALID_PASSWORD,
+	            VALID_FIRST_NAME,
+	            VALID_LAST_NAME,
+	            defaultGroup.getId(),
+	            VALID_ENROLLMENT_YEAR
+	    );
 
-		var saved = studentService.createAll(List.of(createDto)).get(0);
+        var saved = studentService.createAll(List.of(createDto)).getFirst();
 
-		var res = studentService.deleteByIds(List.of(saved.getId(), MISSING_ID));
+        studentService.deleteById(saved.getId());
 
-		assertEquals(Set.of(saved.getId()), res.deletedIds());
-		assertEquals(Set.of(MISSING_ID), res.notFoundIds());
+        assertTrue(studentService.findByIds(List.of(saved.getId())).isEmpty());
+        assertThrows(EntityNotFoundException.class, () -> studentService.getStudentProfileView(saved.getId()));
+	}
+	
+	@Test
+	@DisplayName("listDeletedStudentCardsForAdmin: returns soft-deleted students with deletedAt")
+	void listDeletedStudentCardsForAdmin_returnsDeletedStudents() {
+	    var createDto = dto(
+	            EMAIL_DELETED_CARD,
+	            VALID_PASSWORD,
+	            VALID_FIRST_NAME,
+	            VALID_LAST_NAME,
+	            defaultGroup.getId(),
+	            VALID_ENROLLMENT_YEAR
+	    );
+
+	    var saved = studentService.createAll(List.of(createDto)).getFirst();
+
+	    studentService.deleteById(saved.getId());
+
+	    var page = studentService.listDeletedStudentCardsForAdmin(PageRequest.of(0, 10));
+	    var deleted = page.getContent()
+	            .stream()
+	            .filter(card -> card.id().equals(saved.getId()))
+	            .findFirst()
+	            .orElseThrow();
+
+	    assertEquals(EMAIL_DELETED_CARD, deleted.email());
+	    assertEquals(VALID_FIRST_NAME, deleted.firstName());
+	    assertEquals(VALID_LAST_NAME, deleted.lastName());
+	    assertEquals(VALID_ENROLLMENT_YEAR, deleted.enrollmentYear());
+	    assertEquals(defaultGroup.getName(), deleted.groupName());
+	    assertNotNull(deleted.createdAt());
+	    assertNotNull(deleted.deletedAt());
+	}
+	
+	@Test
+	@DisplayName("deleteById: missing or already deleted student -> EntityNotFoundException")
+	void deleteById_missingOrDeletedStudent_fails() {
+	    assertThrows(EntityNotFoundException.class,
+	            () -> studentService.deleteById(MISSING_ID));
 	}
 
 	@Test
@@ -161,7 +212,7 @@ class StudentServiceTest {
 				defaultGroup.getId(),
 				VALID_ENROLLMENT_YEAR);
 
-		temp = studentService.createAll(List.of(first)).get(0);
+		temp = studentService.createAll(List.of(first)).getFirst();
 
 		var second = dto(DUPLICATED_EMAIL,
 				VALID_PASSWORD,
@@ -176,31 +227,38 @@ class StudentServiceTest {
 	}
 
 	@Test
-	@DisplayName("createAll: non-existing StudyGroup (FK) → EntityNotFoundException")
+    @DisplayName("createAll: non-existing StudyGroup (FK) → EntityNotFoundException")
 	void createAll_nonExistingGroup_fails() {
-		var d = dto(VALID_EMAIL, VALID_PASSWORD, VALID_FIRST_NAME, VALID_LAST_NAME, MISSING_ID, VALID_ENROLLMENT_YEAR);
+	    var d = dto(
+	            EMAIL_NON_EXISTING_GROUP,
+	            VALID_PASSWORD,
+	            VALID_FIRST_NAME,
+	            VALID_LAST_NAME,
+	            MISSING_ID,
+	            VALID_ENROLLMENT_YEAR
+	    );
 
-		assertThrows(EntityNotFoundException.class,
-				() -> studentService.createAll(List.of(d)),
-				"Insert with non-existing group_id must fail");
+	    assertThrows(EntityNotFoundException.class, () -> studentService.createAll(List.of(d)));
 	}
 
 	@Test
 	@DisplayName("moveStudentsToGroup: happy path — moves existing student to target group")
 	void moveStudentsToGroup_happyPath_success() {
-		var createDto = dto(VALID_EMAIL,
-				VALID_PASSWORD,
-				VALID_FIRST_NAME,
-				VALID_LAST_NAME,
-				defaultGroup.getId(),
-				VALID_ENROLLMENT_YEAR);
+	    var createDto = dto(
+	            EMAIL_MOVE_HAPPY,
+	            VALID_PASSWORD,
+	            VALID_FIRST_NAME,
+	            VALID_LAST_NAME,
+	            defaultGroup.getId(),
+	            VALID_ENROLLMENT_YEAR
+	    );
 
-		temp = studentService.createAll(List.of(createDto)).get(0);
+	    temp = studentService.createAll(List.of(createDto)).getFirst();
 
 		int moved = studentService.moveStudentsToGroup(List.of(temp.getId()), updatedGroup.getId());
 		assertEquals(ONE_STUDENT_MOOVED, moved, "Exactly one student should be moved");
 
-		var reloaded = studentService.findByIds(List.of(temp.getId())).get(0);
+		var reloaded = studentService.findByIds(List.of(temp.getId())).getFirst();
 		assertEquals(updatedGroup.getId(), reloaded.getGroup().getId(), "Student must be linked to updated group");
 	}
 
@@ -224,7 +282,7 @@ class StudentServiceTest {
 				defaultGroup.getId(),
 				VALID_ENROLLMENT_YEAR);
 
-		temp = studentService.createAll(List.of(d)).get(0);
+		temp = studentService.createAll(List.of(d)).getFirst();
 
 		assertThrows(EntityNotFoundException.class,
 				() -> studentService.moveStudentsToGroup(List.of(temp.getId()), MISSING_ID),
@@ -257,36 +315,18 @@ class StudentServiceTest {
 	}
 
 	@Test
-	@DisplayName("createAll: invalid DTO (null groupId) -> ConstraintViolationException")
+    @DisplayName("createAll: invalid DTO (null groupId) -> ConstraintViolationException")
 	void createAll_nullGroupId_fails() {
-		var d = dto("nullgrp@example.com",
-				VALID_PASSWORD,
-				VALID_FIRST_NAME,
-				VALID_LAST_NAME,
-				null,
-				VALID_ENROLLMENT_YEAR);
+	    var d = dto(
+	            EMAIL_NULL_GROUP,
+	            VALID_PASSWORD,
+	            VALID_FIRST_NAME,
+	            VALID_LAST_NAME,
+	            null,
+	            VALID_ENROLLMENT_YEAR
+	    );
 
-		assertThrows(ConstraintViolationException.class,
-				() -> studentService.createAll(List.of(d)),
-				"groupId is @NotNull in DTO");
-	}
-
-	@Test
-	@DisplayName("deleteByIds: mix existing/missing -> returns deleted & notFound as expected")
-	void deleteByIds_mixedIds_returnsSplit() {
-		var d = dto("delmix@example.com",
-				VALID_PASSWORD,
-				VALID_FIRST_NAME,
-				VALID_LAST_NAME,
-				defaultGroup.getId(),
-				VALID_ENROLLMENT_YEAR);
-
-		var saved = studentService.createAll(List.of(d)).get(0);
-
-		var result = studentService.deleteByIds(Arrays.asList(saved.getId(), MISSING_ID, null));
-
-		assertEquals(Set.of(saved.getId()), result.deletedIds(), "should delete existing id");
-		assertEquals(Set.of(MISSING_ID), result.notFoundIds(), "should report missing id");
+	    assertThrows(ConstraintViolationException.class, () -> studentService.createAll(List.of(d)));
 	}
 
 	@Test
@@ -299,7 +339,7 @@ class StudentServiceTest {
 				defaultGroup.getId(),
 				VALID_ENROLLMENT_YEAR);
 
-		temp = studentService.createAll(List.of(createDto)).get(0);
+		temp = studentService.createAll(List.of(createDto)).getFirst();
 
 		var view = studentService.getStudentProfileView(temp.getId());
 
